[ECO-5338] Created unit/integration test package for liveobjects 1. Updated separate gradlew task for both unit and integration tests 2. Updated check.yml and integration-test.yml file to run respective tests